k8s/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canaryml
  namespace: canaryml

spec:
  replicas: 2

  strategy:
    canary:
      canaryService: canaryml-canary
      stableService: canaryml-stable

      trafficRouting:
        nginx:
          stableIngress: canaryml-ingress

      steps:
      - setWeight: 10

      - pause:
          duration: 5m

      - analysis:
          templates:
          - templateName: canaryml-gates
          args:
          - name: podTemplateHashValue
            valueFrom:
              podTemplateHashValue: Latest

      - setWeight: 50

      - pause:
          duration: 1m

      - analysis:
          templates:
          - templateName: canaryml-gates
          args:
          - name: podTemplateHashValue
            valueFrom:
              podTemplateHashValue: Latest

      - setWeight: 100

  revisionHistoryLimit: 2

  selector:
    matchLabels:
      app: canaryml

  template:
    metadata:
      labels:
        app: canaryml

    spec:
      containers:
      - name: canaryml
        image: canaryml:v1
        imagePullPolicy: IfNotPresent

        ports:
        - name: http
          containerPort: 8000

        readinessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 5
          periodSeconds: 5
