k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: canaryml-stable
  namespace: canaryml
  labels:
    app: canaryml
spec:
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: canaryml

---
apiVersion: v1
kind: Service
metadata:
  name: canaryml-canary
  namespace: canaryml
  labels:
    app: canaryml
spec:
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: canaryml
